--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/src/index.js",
+    "start": "node ./dist/src/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
     "watch": "tsc --watch",
     "build": "tsc",
