--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/src/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
     "watch": "tsc --watch",
-    "build": "tsc",
+    "build": "tsc && yarn generate && yarn migration ",
     "service": "node service.js",
     "generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n migration -p",
     "migration": "ts-node ./node_modules/typeorm/cli.js migration:run",
@@ -35,6 +35,7 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^1.1.1",
+    "dotenv": "^9.0.2",
     "typeorm": "0.2.32"
   },
   "devDependencies": {
@@ -43,7 +44,6 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^8.0.29",
-    "dotenv": "^9.0.2",
     "ts-node": "3.3.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
