--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "watch": "tsc --watch",
     "seed": "ts-node ./src/utils/seed/index.ts",
-    "build": "tsc && yarn generate && yarn migration ",
+    "build": "tsc ",
     "service": "node service.js",
     "generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n migration -p",
     "migration": "ts-node ./node_modules/typeorm/cli.js migration:run",
