--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "node ./dist/src/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
@@ -16,13 +17,13 @@
     "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop"
   },
   "dependencies": {
-    "apollo-server-express": "^2.24.0",
+    "@apollo/server": "^4.11.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "ts-node": "3.3.0",
-    "express": "^4.17.1",
+    "dotenv": "^9.0.2",
+    "express": "^4.19.2",
     "express-fileupload": "^1.2.1",
     "graphql": "^15.5.0",
     "graphql-upload": "^13.0.0",
@@ -30,20 +31,21 @@
     "node-windows": "^1.0.0-beta.5",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
-    "type-graphql": "^1.1.1",
-    "dotenv": "^9.0.2",
+    "ts-node": "3.3.0",
+    "type-graphql": "1.1.1",
     "typeorm": "0.2.32"
   },
   "devDependencies": {
-    "@types/express-fileupload": "^1.2.2",
-    "@types/graphql-upload": "^8.0.10",
-    "@types/multer": "^1.4.7",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.11",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/graphql-upload": "^8.0.10",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/node": "^8.0.29",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^22.5.4",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "typescript": "^5.5.4"
   }
 }
