chore: added docker compose and file

--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "start": "node ./dist/src/index.js",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn --watch src ./src/index.ts",
     "watch": "tsc --watch",
     "seed": "ts-node ./src/utils/seed/index.ts",
-    "build": "yarn migration && tsc ",
+    "build": "tsc",
     "service": "node service.js",
     "generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n migration -p",
     "migration": "ts-node ./node_modules/typeorm/cli.js migration:run",
