--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "lib": ["es2020"],
-    "target": "es2020",
+    "module": "CommonJS",
+    "target": "esnext",
     "sourceMap": true,
     "rootDirs": ["src"],
     "outDir": "dist",
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "skipLibCheck": true,
     "removeComments": true,
     "noImplicitAny": true,
