feat: upgraded typescript 1.x to 2.x and upgraded graphql

--- a/package.json
+++ b/package.json
@@ -7,32 +7,37 @@
     "start": "node ./dist/src/index.js",
     "dev": "ts-node-dev --respawn --watch src ./src/index.ts",
     "watch": "tsc --watch",
-    "seed": "ts-node ./src/utils/seed/index.ts",
     "build": "tsc",
     "service": "node service.js",
-    "generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n migration -p",
-    "migration": "ts-node ./node_modules/typeorm/cli.js migration:run",
-    "revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
-    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop"
+    "db:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
+    "db:seed": "ts-node ./src/utils/seed/index.ts",
+    "db:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n migration -p",
+    "db:migrate": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "db:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "db:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop"
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "bcrypt": "^5.0.1",
-    "class-validator": "^0.13.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.19.2",
     "express-fileupload": "^1.2.1",
-    "graphql": "^15.5.0",
+    "graphql": "^16.9.0",
+    "graphql-scalars": "^1.23.0",
     "graphql-upload": "^13.0.0",
+    "graphql-ws": "^5.16.0",
+    "graphql-yoga": "^5.10.2",
     "jsonwebtoken": "^8.5.1",
     "node-windows": "^1.0.0-beta.5",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
     "ts-node": "3.3.0",
-    "type-graphql": "1.1.1",
-    "typeorm": "0.2.32"
+    "type-graphql": "2.0.0-rc.2",
+    "typeorm": "0.2.32",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -44,6 +49,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^22.5.4",
+    "@types/ws": "^8.5.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^5.5.4"
   }
